tests/error/match_errors/unsupported_pattern1.err
Error: Unsupported (at $FILE:13:19)
   | 
11 | def main(p: Point) -> None:
12 |     match p:
13 |         case Point(x, y):
   |                    ^ Aliasing in patterns is not supported

Guppy compilation failed due to 1 previous error
